--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head> 
+<meta property="og:image" content="mn.png">
 <link rel="stylesheet" type="text/css" href="style0.css"/>
 <link href="https://fonts.googleapis.com/css?family=League+Script|Poiret+One" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Raleway|Stalemate" rel="stylesheet">
